--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
     "feather-icons-react": "^0.6.2",
     "formik": "^2.4.2",
     "react": "^18.2.0",
