--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "crypto-js": "^4.1.1",
     "feather-icons-react": "^0.6.2",
     "formik": "^2.4.2",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
@@ -32,6 +33,11 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -45,6 +51,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "redux-mock-store": "^1.5.4",
+    "tailwindcss": "^3.3.2",
+    "ts-jest": "^29.1.1"
   }
 }
